name:                rawfilepath
version:             0.1.1
synopsis:            Use RawFilePath instead of FilePath
description:         Please see README.md
homepage:            https://github.com/xtendo-org/rawfilepath#readme
license:             Apache-2.0
license-file:        LICENSE
author:              XT
maintainer:          e@xtendo.org
copyright:           2016 XT
category:            System
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md

library
  hs-source-dirs:      src
  exposed-modules:
    Data.ByteString.RawFilePath,
    RawFilePath.Directory
    System.Process.RawFilePath
    System.RawFilePath
  other-modules:
    RawFilePath.Import
    System.Process.RawFilePath.Basic
    System.Process.RawFilePath.Common
    System.Process.RawFilePath.Internal
    System.Process.RawFilePath.Posix
    System.Process.RawFilePath.Utility
  c-sources:
    cbits/runProcess.c
    cbits/processFlags.c
  include-dirs: cbits
  build-depends:
    bytestring,
    unix,
    base >= 4.7 && < 5
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    CPP
    LambdaCase
    OverloadedStrings
    RecordWildCards

test-suite RawFilePath-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:
    bytestring,

    base,
    rawfilepath
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/xtendo-org/rawfilepath
